--- a/GrigCoreLastfm.csproj
+++ b/GrigCoreLastfm.csproj
@@ -50,13 +50,18 @@
     <Compile Include="API\Types\Artist.cs" />
     <Compile Include="API\Types\Base.cs" />
     <Compile Include="API\Types\Bio.cs" />
+    <Compile Include="API\Types\Event.cs" />
     <Compile Include="API\Types\Formation.cs" />
+    <Compile Include="API\Types\Geopoint.cs" />
     <Compile Include="API\Types\Images.cs" />
+    <Compile Include="API\Types\Location.cs" />
     <Compile Include="API\Types\Member.cs" />
     <Compile Include="API\Types\Session.cs" />
     <Compile Include="API\Types\Stats.cs" />
     <Compile Include="API\Types\Tag.cs" />
+    <Compile Include="API\Types\Track.cs" />
     <Compile Include="API\Types\User.cs" />
+    <Compile Include="API\Types\Venue.cs" />
     <Compile Include="Lastfm\LastfmParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request\LastfmRequest.cs" />
